# pylib

./: .gitignore  404.html  README.md  config.toml  development.md  fieldsites_todo.md  index.html  justfile  mkdocs.yml  pyproject.toml  search.html  setup.py  sitemap.xml  updateDocumentation.md  uploadNewVersion.md
.github/workflows/: main.yml
changelog/: index.html
css/: faq.css
docs/: changelog.md  dobj.changelog.md  examples.md  faq.md  getting_started.md  index.md  install.md  legacy_examples.md  modules.md
examples/: binFile.py  index.html
faq/: index.html
getting_started/: index.html
icoscp/: 404.html  CITATION.cff  README.md  __init__.py  const.py  countries.json  country.py  exceptions.py  header.md  index.html  justfile  mkdocs.yml  pid.py  pyproject.toml  runPytest.py  search.html  sitemap.xml  uploadNewVersion.md
icoscp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
icoscp/authentication/: __init__.py  authentication.py  index.html
icoscp/changelog/: index.html
icoscp/collection/: collection.py
icoscp/countries/: __init__.py
icoscp/cpauth/: __init__.py  authentication.py  exceptions.py
icoscp/cpb/: dobj.py  dtype.py  get_size.py  metadata.py
icoscp/docs/: authentication.md  changelog.md  examples.md  faq.md  getting_started.md  index.md  install.md  legacy_examples.md  modules.md
icoscp/examples/: index.html
icoscp/faq/: index.html
icoscp/getting_started/: index.html
icoscp/install/: index.html
icoscp/legacy_examples/: index.html
icoscp/modules/: index.html
icoscp/search/: search_index.json
icoscp/sparql/: runsparql.py  sparqls.py
icoscp/src/icoscp/: __init__.py  const.py  dobj.py
icoscp/src/icoscp/collection/: collection.py
icoscp/src/icoscp/cpb/: __init__.py  dobj.py  get_size.py
icoscp/src/icoscp/sparql/: runsparql.py  sparqls.py
icoscp/src/icoscp/station/: fmap.py  station.py
icoscp/src/icoscp/stilt/: __init__.py
icoscp/station/: fmap.py  station.py
icoscp/stilt/: __init__.py  checks.py  fmap.py  geoinfo.py  localdev.py  readme.md  station.py  stationfilter.py  stations.json  stiltStations.py  stiltobj.py  stiltstation.py  stns.json  test.py  timefuncs.py
icoscp/test/: test_cpb.py
icoscp_stilt/: 404.html  README.md  index.html  justfile  mkdocs.yml  pyproject.toml  search.html  sitemap.xml
icoscp_stilt/changelog/: index.html
icoscp_stilt/docs/: changelog.md  getting_started.md  index.md  modules.md
icoscp_stilt/getting_started/: index.html
icoscp_stilt/modules/: index.html
icoscp_stilt/search/: search_index.json
icoscp_stilt/src/icoscp_stilt/: __init__.py  const.py  fmap.py  stilt.py  stiltobj.py  stiltstation.py
icoscp_stilt/tests/: test_stiltstation.py
icoscp_stilt/tests/stiltstation-mock-data/station-metadata/: HHHH.json  MED-1.json  ZSF.json
icoscp_stilt/tests/stiltstation-mock-data/stiltweb/: station_info.csv
icoscp_stilt/tests/stiltstation-mock-data/stiltweb/stations/: HHHH  ZSF
install/: index.html
modules/: index.html
search/: search_index.json
src/icoscp/: __init__.py  const.py  constants.py  dobj.py  exceptions.py
src/icoscp/collection/: collection.py
src/icoscp/countries/: __init__.py  country.py
src/icoscp/cpauth/: authentication.py  exceptions.py
src/icoscp/cpb/: dobj.py  dobj_auth.py  get_size.py  logfile.py  metadata.py
src/icoscp/sparql/: runsparql.py  sparqls.py
src/icoscp/station/: fmap.py  station.py
src/icoscp/stilt/: __init__.py  fmap.py  geoinfo.py  stationinfo.py  stiltobj.py  stiltstation.py  timefuncs.py
stilt/: __init__.py  stiltobj.py
test/: runPytest.py  test_cpb.py
tests/: HHHH.json  MED-1.json  MED-1_no_geoinfo.json  README.md  ZSF.json  ZSF_no_geoinfo.json  __init__.py  test_cpb.py  test_stiltstation.py
tests/stiltstation-mock-data/station-metadata/: HHHH.json  MED-1.json
tests/stiltstation-mock-data/stiltweb/stations/: ZUR200  ZWO200
tests/stiltweb/: station_info.csv
